--- a/English/functions/kernel-data/kernel-4.4
+++ b/English/functions/kernel-data/kernel-4.4
@@ -2,26 +2,26 @@
 
 dir="$(dirname "$0")"
 
-source $dir/functions/kernel-data/kernel-4.4
-source $dir/functions/kernel-data/kernel-4.5
+source $dir/functions/kernel-data/stable/v4.4-wily-stable
+source $dir/functions/kernel-data/unstable/v4.4-wily-unstable
 
 # Kernel system upgrade
-function kernel {
+function kernel-4.4 {
     eval `resize`
-    KERNEL=$(whiptail \
+    KERNELALL44=$(whiptail \
         --notags \
         --title "Update system kernel" \
         --menu "\nWhat would you like to do?" \
         --ok-button "Update" \
         --cancel-button "Go Back" \
         $LINES $COLUMNS $(( $LINES - 12 )) \
-        kernel-4.4        'Update 4.4-wily kernel' \
-        kernel-4.5        'Update 4.5-wily kernel' \
+        v4.4-wily-stable        'Update stable (v4.4-wily) kernel (need reboot)' \
+        v4.4-wily-unstable      'Update unstable (v4.4-wily) kernel (need reboot)' \
         3>&1 1>&2 2>&3)
 
     exitstatus=$?
     if [ $exitstatus = 0 ]; then
-        clear && $KERNEL
+        clear && $KERNELALL44
     else
         clear && main
     fi
