--- a/English/functions/kernel-data/kernel-4.5
+++ b/English/functions/kernel-data/kernel-4.5
@@ -8,20 +8,20 @@ source $dir/functions/kernel-data/unstable/v4.5-wily-unstable
 # Kernel system upgrade
 function kernel-4.5 {
     eval `resize`
-    KERNEL=$(whiptail \
+    KERNELALL45=$(whiptail \
         --notags \
         --title "Update system kernel" \
         --menu "\nWhat would you like to do?" \
         --ok-button "Update" \
         --cancel-button "Go Back" \
         $LINES $COLUMNS $(( $LINES - 12 )) \
-        stable        'Update stable (v4.5-wily) kernel (need reboot)' \
-        unstable      'Update unstable (v4.5-wily) kernel (need reboot)' \
+        v4.5-wily-stable        'Update stable (v4.5-wily) kernel (need reboot)' \
+        v4.5-wily-unstable      'Update unstable (v4.5-wily) kernel (need reboot)' \
         3>&1 1>&2 2>&3)
 
     exitstatus=$?
     if [ $exitstatus = 0 ]; then
-        clear && $KERNEL
+        clear && $KERNELALL45
     else
         clear && main
     fi
