--- a/English/functions/kernel-data/kernel-4.3
+++ b/English/functions/kernel-data/kernel-4.3
@@ -10,13 +10,13 @@ function kernel-4.3 {
   eval `resize`
   KERNELALL43=$(whiptail \
     --notags \
-    --title "Update system kernel" \
-    --menu "\nWhat would you like to do?" \
-    --ok-button "Update" \
-    --cancel-button "Go Back" \
+    --title 'Update system kernel' \
+    --menu '\nWhat would you like to do?' \
+    --ok-button 'Update' \
+    --cancel-button 'Go Back' \
     $LINES $COLUMNS $(( $LINES - 12 )) \
-    v4.3-wily-stable        'Update stable (v4.3-wily) kernel (need reboot)' \
-    v4.3-wily-unstable      'Update unstable (v4.3-wily) kernel (need reboot)' \
+    v4.3-wily-stable 'Update stable (v4.3-wily) kernel (need reboot)' \
+    v4.3-wily-unstable 'Update unstable (v4.3-wily) kernel (need reboot)' \
     3>&1 1>&2 2>&3)
 
   exitstatus=$?
