--- a/English/functions/kernel-data/kernel-4.5
+++ b/English/functions/kernel-data/kernel-4.5
@@ -11,14 +11,14 @@ function kernel-4.5 {
     eval `resize`
     KERNELALL45=$(whiptail \
         --notags \
-        --title "Update system kernel" \
-        --menu "\nWhat would you like to do?" \
-        --ok-button "Update" \
-        --cancel-button "Go Back" \
+        --title 'Update system kernel' \
+        --menu '\nWhat would you like to do?' \
+        --ok-button 'Update' \
+        --cancel-button 'Go Back' \
         $LINES $COLUMNS $(( $LINES - 12 )) \
-        v4.5-wily-stable        'Update stable (v4.5-wily) kernel (need reboot)' \
-        v4.5-yakkety-stable     'Update stable (v4.5-yakkety) kernel (need reboot)' \
-        v4.5-wily-unstable      'Update unstable (v4.5-wily) kernel (need reboot)' \
+        v4.5-wily-stable 'Update stable (v4.5-wily) kernel (need reboot)' \
+        v4.5-yakkety-stable 'Update stable (v4.5-yakkety) kernel (need reboot)' \
+        v4.5-wily-unstable 'Update unstable (v4.5-wily) kernel (need reboot)' \
         3>&1 1>&2 2>&3)
 
     exitstatus=$?
