--- a/English/functions/kernel-data/kernel-4.7
+++ b/English/functions/kernel-data/kernel-4.7
@@ -2,25 +2,27 @@
 
 dir="$(dirname "$0")"
 
+source $dir/functions/kernel-data/stable/v4.7-stable
 source $dir/functions/kernel-data/unstable/v4.7-yakkety-unstable
 
 # Kernel system upgrade
 function kernel-4.7 {
-    eval `resize`
-    KERNELALL47=$(whiptail \
-        --notags \
-        --title "Update system kernel" \
-        --menu "\nWhat would you like to do?" \
-        --ok-button "Update" \
-        --cancel-button "Go Back" \
-        $LINES $COLUMNS $(( $LINES - 12 )) \
-        v4.7-yakkety-unstable      'Update unstable (v4.7-yakkety) kernel (need reboot)' \
-        3>&1 1>&2 2>&3)
+  eval `resize`
+  KERNELALL47=$(whiptail \
+    --notags \
+    --title 'Update system kernel' \
+    --menu '\nWhat would you like to do?' \
+    --ok-button 'Update' \
+    --cancel-button 'Go Back' \
+  $LINES $COLUMNS $(( $LINES - 12 )) \
+    v4.7-stable 'Update stable (v4.7) kernel (need reboot)' \
+    v4.7-yakkety-unstable 'Update unstable (v4.7-yakkety) kernel (need reboot)' \
+  3>&1 1>&2 2>&3)
 
-    exitstatus=$?
-    if [ $exitstatus = 0 ]; then
-        clear && $KERNELALL47
-    else
-        clear && main
-    fi
+exitstatus=$?
+  if [ $exitstatus = 0 ]; then
+    clear && $KERNELALL47
+  else
+    clear && main
+  fi
 }
